--- a/app/assets/stylesheets/users/registrations/new.css
+++ b/app/assets/stylesheets/users/registrations/new.css
@@ -1,7 +1,7 @@
 /* Main */
 #main {
   width: 100%;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
   display: flex;
   align-items: start;
   justify-content: center;
