--- a/app/views/users/_show_album.html.erb
+++ b/app/views/users/_show_album.html.erb
@@ -2,19 +2,19 @@
         <% @albums.each do |album| %>
             <div class="photo_container col-md-3 col-10 m-5 m-md-0">
                 <img
-                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : asset_path('default_photo.jpg') %>"
                     class="img-fluid"
                     style="width: 90%; height: 225px; object-fit: cover"
                     alt=""
                 />
                 <img
-                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : asset_path('default_photo.jpg') %>"
                     class="img-fluid"
                     style="width: 90%; height: 225px; object-fit: cover"
                     alt=""
                 />
                 <img
-                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : asset_path('default_photo.jpg') %>"
                     class="img-fluid"
                     style="width: 90%; height: 225px; object-fit: cover"
                     alt=""
