--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -7,6 +7,7 @@
        %>
     </h2>
     <ul>
+      <%= resource.errors %>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
