--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,20 +4,46 @@
     class="sidebar d-none d-md-flex flex-column align-items-center col-2"
 >
     <ul class="d-flex flex-column align-items-start w-auto">
-        <li>
-            <a href="<%= root_path %>"
-                class="<%= 'is_active' if current_page?(root_path) || request.path == '/albums' %>"
-            >
-                Feeds
-            </a>
-        </li>
-        
-        <li>
-            <a href="/discover/photos"
-                class="<%= 'is_active' if current_page?("/discover/photos") || current_page?("/discover/albums") %>"
-            >
-                Discovers
-            </a>
-        </li>
+        <% if current_user && current_user.is_admin? %>
+            <li>
+                <a href="<%= admin_photos_path %>"
+                    class="<%= 'is_active' if current_page?(admin_photos_path) %>"
+                >
+                    Manage Photos
+                </a>
+            </li>
+            
+            <li>
+                <a href="<%=admin_albums_path %>"
+                    class="<%= 'is_active' if current_page?(admin_albums_path) %>"
+                >
+                    Manage Albums
+                </a>
+            </li>
+            
+            <li>
+                <a href="<%= admin_users_path %>"
+                    class="<%= 'is_active' if current_page?(admin_users_path) %>"
+                >
+                    Manage Users
+                </a>
+            </li>
+        <% else %>
+            <li>
+                <a href="<%= root_path %>"
+                    class="<%= 'is_active' if current_page?(root_path) || request.path == '/albums' %>"
+                >
+                    Feeds
+                </a>
+            </li>
+            
+            <li>
+                <a href="/discover/photos"
+                    class="<%= 'is_active' if current_page?("/discover/photos") || current_page?("/discover/albums") %>"
+                >
+                    Discovers
+                </a>
+            </li>
+        <% end %>
     </ul>
 </div>
