--- a/app/views/admin/albums/_item.html.erb
+++ b/app/views/admin/albums/_item.html.erb
@@ -1,6 +1,5 @@
 <div
-    class="d-flex col-md-3 align-content-start py-2"
-    style="gap: 1rem;"
+    class="d-flex col-md-3 align-content-start my-1"
 >
     <div
         class="card bg-dark text-white border-0"
