--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -7,7 +7,7 @@
        %>
     </h2>
     <ul>
-      <%= resource.errors %>
+      <%= resource.errors.details %>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
