--- a/app/assets/stylesheets/admin/albums/index.css
+++ b/app/assets/stylesheets/admin/albums/index.css
@@ -8,7 +8,7 @@
   background-color: #ffffff;
   display: flex;
   flex-direction: row;
-  padding: 1rem 2rem;
+  padding: 1rem;
   flex-wrap: wrap;
 }
 
